# au-payroll-model-categories

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  Makefile  README.md  SWIFT_INTEGRATION.md  claude.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
docs/adr/: 001-dynamic-model-loading.md
examples/: README.md  api_responses.md  category_response.json  invoice_office_rent.json  invoice_software.json  invoice_utilities.json  request.json  tag_response.json  test_api.sh
models/: category_model_metrics.json  model_metrics.json  model_metrics_tfidf.json  tag_model_metrics.json
queries/: fetch_tag_training_data.sql
src/: __init__.py  analyze_data.py  config.py  fetch_training_data.py  logging_utils.py  main.py  predict.py  preprocessing.py  train_model.py  train_model_category.py  train_model_tag.py
tests/: __init__.py  test_api.py
