[project]
name = "invoice-classifier"
version = "0.1.0"
description = "Fast ML-based invoice categorization API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "lightgbm>=4.3.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ipython>=8.20.0",
]
